--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-        <title>Autores Precedentes de la infografía digital</title>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet" />
+        <title>Trabajos de Herbert Bayer</title>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
         <style>
             body {
-                font-family: "Libre Baskerville", serif;
+                font-family: 'IBM Plex Serif', serif;
                 font-weight: 400;
             }
             h1 {
-                font-weight: 400;
+                font-weight: 200;
                 font-style: italic;
             }
             @media (min-width: 992px) {
@@ -21,53 +21,61 @@
                     text-align: justify;
                 }
             }
+            figure img{
+                  filter: grayscale(1);
+            }
+            figure:hover img{
+                filter:grayscale(0);
+                transition: all ease 0.5s;
+            }
         </style>
     </head>
     <body class="bg-light">
         <div class="container">
             <div class="row py-3">
                 <div class="col-12">
-                    <h1 class="py-4">Autores precedentes de la infografía digital</h1>
-                    <p>Se expondran distintas imagenes sobre obras de personajes reconocidos que han sido parte de la progresión de la infografía. </p>
+                    <h1 class="py-4">Herbert Bayer</h1>
+                    <p>En este pagina expondremos algunos de las Trabajos sobresalientes que hizo Herbert Bayer a lo largo de su vida</p>
+
                 </div>
             </div>
             <div class="row">
                 <!--Imagen 1-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/Galileo_moon_phases_dominiopublico.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Galileo Galilei muestra con estas ilustraciones las fases que presenta la luna vista desde la tierra.</figcaption>
+                    <img src="img/herbertbayer.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="p-1 mb-2 small">Herbert Bayer</figcaption>
                 </figure>
                 <!--Imagen 2-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/descartes_telescopio.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Telescopio gigante ideado por Rene Descartes</figcaption>
+                    <img src="img/tipobayer.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="p-1 mb-2 small">Tipografía creada por el, utilizada en las publicaciones de la Bauhaus</figcaption>
                 </figure>
                 <!--Imagen 3-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/universitylibraryogheidelberg,germany_publicdomain.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Pagina titular del periódico de Johann Carlous</figcaption>
+                    <img src="img/fotomontajebayern.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="p-1 mb-2 small">Trabajo de fotomonfaje</figcaption>
                 </figure>
                 <!--Imagen 4-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/fransvan.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Publicación de Frans Van Schooten " Exercitationum Mathematicarum libri quinque "</figcaption>
+                    <img src="img/portadabayer.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="p-1 mb-2 small">Portada para Harper`s Bazar</figcaption>
                 </figure>
                 <!--Imagen 5-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/Descartes-1637-b011.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Pagina de "La dioptrique" de Rene Descartes</figcaption>
+                    <img src="img/atlasbayer.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="p-1 mb-2 small">Atlas concebido como regalo de empresa de la CCA EN 1953</figcaption>
                 </figure>
                 <!--Imagen 6-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/bilbliadegutenberg.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">La bilbia de Johannes Gutenberg</figcaption>
+                    <img src="img/atlasbayer2.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="p-1 mb-2 small"></figcaption>
                 </figure>
 
             </div>
             <div class="row pt-5">
                 <footer class="col-12 py-3 border-top">
                     <p>
-                        Silvio Arribas Zenteno<span class="float-right"><a href="https://github.com/profesorfaco/dno075-2020/">Infografía Digital</a> <span class="d-none d-lg-inline">&bull; Lunes 10 de agosto, 2020</span></span>
+                        Silvio Arribas <span class="float-right"><a href="https://github.com/profesorfaco/dno075-2020/">Infografía Digital</a> <span class="d-none d-lg-inline">&bull; Lunes 17 de agosto, 2020</span></span>
                     </p>
                 </footer>
             </div>
