--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
-        <title>Autores Precedentes de la infografía digital</title>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@0;1&display=swap" rel="stylesheet" />
+        <title>Jaime Serra</title>
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet" />
         <style>
             body {
-                font-family: "Libre Baskerville", serif;
+                font-family: "Work Sans", sans-serif;
                 font-weight: 400;
+                background-color: #fafafa;
+                color: #222;
             }
+
+            body::-webkit-scrollbar {
+                width: 0.4rem;
+                scrollbar-color: rgba(200, 200, 200, 1) rgba(225, 225, 225, 1);
+            }
+
+            body::-webkit-scrollbar-track {
+                background: rgba(225, 225, 225, 1);
+            }
+            body::-webkit-scrollbar-thumb {
+                background-color: rgba(200, 200, 200, 1);
+            }
+            body::-webkit-scrollbar-thumb:hover {
+                background-color: rgba(175, 175, 175, 1);
+            }
+
             h1 {
+                font-family: "DM Serif Display", serif;
+                color: #444;
+                letter-spacing: 0.05rem;
                 font-weight: 400;
-                font-style: italic;
+                text-shadow: 0.05rem 0.05rem 0.1rem rgba(55, 55, 55, 0.25), -0.05rem -0.05rem 0.1rem rgba(200, 200, 200, 0.25);
             }
             @media (min-width: 992px) {
                 p {
@@ -21,56 +43,85 @@
                     text-align: justify;
                 }
             }
+            figure {
+                position: relative;
+                margin-bottom: 2rem;
+                overflow:hidden;
+            }
+            figure img{
+                cursor:crosshair;
+            }
+            figure figcaption {
+                position: absolute;
+                bottom: -2rem;
+                left: 0.95rem;
+                margin:0;
+                color:rgba(255,255,255,0.9);
+                background: rgba(0, 0, 0, 0.75);
+            }
+            figure:hover figcaption {
+                bottom: 0;
+                transition: all ease 0.25s;
+            }
         </style>
     </head>
-    <body class="bg-light">
+    <body>
         <div class="container">
             <div class="row py-3">
                 <div class="col-12">
-                    <h1 class="py-4">Autores precedentes de la infografía digital</h1>
-                    <p>Se expondran distintas imagenes sobre obras de personajes reconocidos que han sido parte de la progresión de la infografía. </p>
+                    <h1 class="py-4">Jaime Serra</h1>
+                    <p>Mollerussa, Lleida,  1963</p>
+                    <p>Prestidigitador gráfico sometido por voluntad propia a la infografía –como herramienta vehicular- y a una suerte de metáfora de datos –como materia prima-, realiza todo tipo de trucos visuales con la finalidad de desenmascarar el ‘yo’, dejando patente que, en verdad, se trata de otro.
+Durante más de veinticinco años ejerció la infografía periodística en algunos medios de referencia de América Latina y Europa. Actividad que le llevo al absurdo de ser considerado por sus colegas y mediante la Society for News Design, como “el infografista más influyente del mundo en el periodo 1992-2012”.</p>
+
+
                 </div>
             </div>
             <div class="row">
                 <!--Imagen 1-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/Galileo_moon_phases_dominiopublico.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Galileo Galilei muestra con estas ilustraciones las fases que presenta la luna vista desde la tierra.</figcaption>
+                    <img src="jaimeserrael.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Jaime Sierra periodista infógrafo</figcaption>
                 </figure>
                 <!--Imagen 2-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/descartes_telescopio.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Telescopio gigante ideado por Rene Descartes</figcaption>
+                    <img src="Jaimeserra2.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Salarios de los trabajadores en relación de dependencia</figcaption>
                 </figure>
                 <!--Imagen 3-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/universitylibraryogheidelberg,germany_publicdomain.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Pagina titular del periódico de Johann Carlous</figcaption>
+                    <img src="jaimeserra3.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Infografía del mosquito</figcaption>
                 </figure>
                 <!--Imagen 4-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/fransvan.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Publicación de Frans Van Schooten " Exercitationum Mathematicarum libri quinque "</figcaption>
+                    <img src="jaimeserra4.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Infografía sobre giras de Bob Dylan</figcaption>
                 </figure>
                 <!--Imagen 5-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/Descartes-1637-b011.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">Pagina de "La dioptrique" de Rene Descartes</figcaption>
+                    <img src="jaimeserra5.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Infografía tour 100</figcaption>
                 </figure>
                 <!--Imagen 6-->
                 <figure class="col-12 col-lg-6">
-                    <img src="img/bilbliadegutenberg.jpg" class="img-fluid" />
-                    <figcaption class="p-1 mb-2 small">La bilbia de Johannes Gutenberg</figcaption>
+                    <img src="jaimeserra1.jpg" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Infografía de la ballena franca</figcaption>
                 </figure>
 
             </div>
             <div class="row pt-5">
                 <footer class="col-12 py-3 border-top">
                     <p>
-                        Silvio Arribas Zenteno<span class="float-right"><a href="https://github.com/profesorfaco/dno075-2020/">Infografía Digital</a> <span class="d-none d-lg-inline">&bull; Lunes 10 de agosto, 2020</span></span>
+                        Silvio Arribas <span class="float-right"><a href="https://github.com/profesorfaco/dno075-2020">Infografía Digital</a> <span class="d-none d-lg-inline">&bull; Lunes 24 de agosto, 2020</span></span>
                     </p>
                 </footer>
             </div>
         </div>
+        <script src="https://unpkg.com/scrollreveal"></script>
+        <script>
+            // Pueden visitar https://scrollrevealjs.org/ para conocer más sobre esta biblioteca de JavaScript
+            ScrollReveal().reveal('figure', { delay: 500 });
+        </script>
     </body>
 </html>
