--- a/index.html
+++ b/index.html
@@ -80,32 +80,32 @@ Durante más de veinticinco años ejerció la infografía periodística en algun
             <div class="row">
                 <!--Imagen 1-->
                 <figure class="col-12 col-lg-6">
-                    <img src="jaimeserrael.jpg" class="img-fluid shadow-sm" />
+                    <img src="img/jaimeserrael.jpg" class="img-fluid shadow-sm" />
                     <figcaption class="pt-1 pb-2 px-2 small">Jaime Sierra periodista infógrafo</figcaption>
                 </figure>
                 <!--Imagen 2-->
                 <figure class="col-12 col-lg-6">
-                    <img src="Jaimeserra2.jpg" class="img-fluid shadow-sm" />
+                    <img src="img/Jaimeserra2.jpg" class="img-fluid shadow-sm" />
                     <figcaption class="pt-1 pb-2 px-2 small">Salarios de los trabajadores en relación de dependencia</figcaption>
                 </figure>
                 <!--Imagen 3-->
                 <figure class="col-12 col-lg-6">
-                    <img src="jaimeserra3.jpg" class="img-fluid shadow-sm" />
+                    <img src="img/jaimeserra3.jpg" class="img-fluid shadow-sm" />
                     <figcaption class="pt-1 pb-2 px-2 small">Infografía del mosquito</figcaption>
                 </figure>
                 <!--Imagen 4-->
                 <figure class="col-12 col-lg-6">
-                    <img src="jaimeserra4.jpg" class="img-fluid shadow-sm" />
+                    <img src="img/jaimeserra4.jpg" class="img-fluid shadow-sm" />
                     <figcaption class="pt-1 pb-2 px-2 small">Infografía sobre giras de Bob Dylan</figcaption>
                 </figure>
                 <!--Imagen 5-->
                 <figure class="col-12 col-lg-6">
-                    <img src="jaimeserra5.jpg" class="img-fluid shadow-sm" />
+                    <img src="img/jaimeserra5.jpg" class="img-fluid shadow-sm" />
                     <figcaption class="pt-1 pb-2 px-2 small">Infografía tour 100</figcaption>
                 </figure>
                 <!--Imagen 6-->
                 <figure class="col-12 col-lg-6">
-                    <img src="jaimeserra1.jpg" class="img-fluid shadow-sm" />
+                    <img src="img/jaimeserra1.jpg" class="img-fluid shadow-sm" />
                     <figcaption class="pt-1 pb-2 px-2 small">Infografía de la ballena franca</figcaption>
                 </figure>
 
